Web Inspector: Probe values not showing in sidebar https://bugs.webkit.org/show_bug.cgi?id=170143
Reviewed by Joseph Pecoraro.

Force the DataGrid to refresh its layout after adding a probe sample.

* UserInterface/Views/ProbeSetDataGrid.css:
(.details-section.probe-set .data-grid tr.data-updated):
(.details-section.probe-set .data-grid > tr.data-updated): Deleted.
Drive-by fix: selector didn't match any rows.

* UserInterface/Views/ProbeSetDataGrid.js:
(WebInspector.ProbeSetDataGrid.prototype._updateNodeForFrame):


Canonical link: https://commits.webkit.org/187448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214967 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/ProbeSetDataGrid.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ProbeSetDataGrid.css
@@ -59,7 +59,7 @@
     border-bottom: 2px solid hsl(0, 0%, 40%);
 }
 
-.details-section.probe-set .data-grid > tr.data-updated {
+.details-section.probe-set .data-grid tr.data-updated {
     animation-duration: 0.3s;
     animation-name: blink-probe-frame;
 }
